# humble-logging-library

./: CMakeLists.txt
include/humblelogging/: capi.h  defines.h  logevent.h
src/: capi.cpp
src/formatter/: patternformatter.cpp
test/: CMakeLists.txt  common_tests.cpp
